fix: scrolling on small devices

--- a/FRONTEND/src/pages/Marks/SetMarks/style.scss
+++ b/FRONTEND/src/pages/Marks/SetMarks/style.scss
@@ -22,7 +22,7 @@
 
 
   main {
-    margin-bottom: $footer-height + 12px;
+    padding-bottom: $footer-height + 12px;
     text-align: center;
     overflow: hidden;
 
